menambahkan file gambar untuk slider

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
      </nav>
+     <div class="jumbotron">
+         <img src="assets/img/banner/Utama.png" alt="banner">
+     </div>
     </header>
     <main>
         <article></article>
