--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="assets/img/favicon/favicon.png" type="image/png"> 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">   
 </head>
 
 </head>
@@ -16,34 +18,73 @@
         <div class="medsos">
             <div class="container">               
                     <ul>
-                        <li><a href="tel:+6281224907833"><i class="fas fa-phone-square-alt"> 0812-2490-7833 (Call/SMS/Whatsapp)</i></a></li>
-                        <li><a href="mailto:cs@kairentcar.id"><i class="far fa-envelope"></i> CS@kairentcar.id</a></li>
+                        <li><a href="#"><i class="fas fa-phone-square-alt"> 0812-2490-7833 (Call/SMS/Whatsapp)</i></a></li>
+                        <li><a href="#"><i class="far fa-envelope"></i> CS@kairentcar.id</a></li>
                         <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                         <li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
                         <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
                     </ul>                
             </div>
-      </div>
-      <!-- menu navigasi -->
-     <nav >         
-         <a href="index.html"><img src="assets/img/Logo.png" alt="logo"></a>
-         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#About">About</a></li>
-            <li><a href="#service">Service</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-     </nav>
-     <div class="jumbotron">
-         <img src="assets/img/banner/Utama.png" alt="banner">
-     </div>
+        </div>
+        <!-- menu navigasi -->
+        <nav >         
+            <a href="index.html"><img src="assets/img/Logo.png" alt="logo"></a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#profile">Profile</a></li>
+                <li><a href="#harga">Harga Rental</a></li>
+                <li><a href="#pelayanan">Pelayanan</a></li>
+                <li><a href="#contact">Kotak</a></li>
+            </ul>
+        </nav>
+            <!-- Slider main container -->
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="assets/img/banner/1.png" alt="Banner-utama">
+                </div>
+                <div class="swiper-slide">
+                    <img src="assets/img/banner/2.png" alt="Banner-kedua">
+                </div>
+                <div class="swiper-slide">
+                    <img src="assets/img/banner/3.png" alt="Banner-ketiga">
+                </div>                
+            </div>        
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>         
+        </div>
     </header>
+    <!-- content -->
     <main>
-        <article></article>
-        <aside>
+        <div id="content" class="card">
+            <article  id="profile" >
+                <h2>Profile Perusahaan</h2>
+                <hr size="10px" width="100%">
+                <img src="assets/img/Logo.png" alt="Logo" class="feature-image">
+                <p>
+                    <B>KAI RENT CAR</B> adalah penyedia jasa sewa / rental mobil di kota Bandung. Sejak berdiri di tahun 2019 lalu, kami berfokus pada pelayanan transportasi bagi para wisatawan baik lokal maupun mancanegara. Customer yang kami layani banyak dari berbagai daerah dan berbagai instansi perkantoran baik pemerintah ataupun swasta.
+                </p>
+            </article>
+            <arcticle id="Harga-rental" >
+                <h2>Harga Rental</h2>
+                <hr size="10px" width="100%">
+            </arcticle>
+            <article id="pelayanan" >
+                <h2>Pelayanan</h2>
+                <hr size="10px" width="100%">
+            </article>
+            <article id="Kontak">
+                <h2>Kotak</h2>
+                <hr size="10px" width="100%">
+            </article>
+            <aside>
 
-        </aside>
+            </aside>
+        </div>
     </main>
     <footer></footer>
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/js/rental.js"></script>
 </body>
 </html>
