--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <nav >         
             <a href="index.html"><img src="assets/img/Logo.png" alt="logo"></a>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#profile">Profile</a></li>
-                <li><a href="#harga">Harga Rental</a></li>
-                <li><a href="#pelayanan">Pelayanan</a></li>
-                <li><a href="#contact">Kotak</a></li>
+                <li><a href="index.html">BERANDA</a></li>
+                <li><a href="#profile">TENTANG KAMI</a></li>
+                <li><a href="#harga">DAFTAR HARGA</a></li>
+                <li><a href="#pelayanan">PELAYANAN</a></li>
+                <li><a href="#contact">KONTAK KAMI</a></li>
             </ul>
         </nav>
     </header>
